--- a/jianli.html
+++ b/jianli.html
@@ -186,7 +186,7 @@ trix-toolbar [data-trix-dialog] [data-trix-validate]:invalid {
   z-index: 2;
   width: 0;
   height: 0;
-}</style><style type="text/css" id="styles_js">.right-panel-resume-editor{min-height:289.5mm !important;}</style><link rel="stylesheet" type="text/css" id="u0" href="./我的简历 WonderCV_files/skin.min.css"><link type="text/css" rel="stylesheet" href="./我的简历 WonderCV_files/emotion.css"></head>
+}</style><style type="text/css" id="styles_js">.right-panel-resume-editor{min-height:289.5mm !important;}</style></head>
 
   <body class="font-zh-CN" id="cvs-show" style="">
     
