--- a/jianli.html
+++ b/jianli.html
@@ -661,7 +661,7 @@ trix-toolbar [data-trix-dialog] [data-trix-validate]:invalid {
 <li>与4人PHP团队一起完成宜配商城的开发，跑街令APP的安卓和IOS接口对接，以及现有B2B平台的维护，并在宜配商城开发中负责关键业务功能</li>
 <li>项目经验：</li>
 <li><a href="https://www.paojd.cn/" target="_blank">B2C宜配商城（跑街的&nbsp; &nbsp;https://www.paojd.cn/）</a></li>
-<li>定位为中型网站，目前进驻店铺已达88家，注册用户8w+，上架商品10w+。<br>
+<li>定位为中型网站，目前进驻店铺已达88家，上架商品10w+。<br>
 <ul>
 <li>使用原生MVC框架开发，基于已设计基本数据库在项目开发中进行扩展。</li>
 <li>基于设计图完成网站页面的div布局以及效果展示。</li>
